--- a/index.html
+++ b/index.html
@@ -98,6 +98,55 @@
                 </div>
             </div>
         </section>
+
+        <section class="menu-section">
+          <div class="section-content">
+            <ul class="menu-list">
+              <li class="menu-item">
+                <img src="assets/hot-beverages.png" class="menu-image">
+                <h3 class="name">Hot Beverage</h3>
+                <p class="text">Sip into warmth with every cup – rich, aromatic, and perfectly brewed hot coffee.</p>
+              </li>
+              <li class="menu-item">
+                <img src="assets/cold bevrage.png" alt="" class="menu-image">
+                <h3 class="name">Cold Beverage</h3>
+                <p class="text"></p>
+              </li>
+              <li class="menu-item">
+                <img src="assets/refreshment.png" alt="" class="menu-image">
+                <h3 class="name">Refreshment</h3>
+                <p class="text"></p>
+              </li>
+              <li class="menu-item">
+                <img src="assets/special combo.png" alt="" class="menu-image">
+                <h3 class="name"></h3>
+                <p class="text"></p>
+              </li>
+              <li class="menu-item">
+                <img src="assets/dessert.png" alt="" class="menu-image">
+                <h3 class="name">dessert</h3>
+                <p class="text"></p>
+              </li>
+              <li class="menu-item">
+                <img src="assets/burger-frenchfries.png" alt="" class="menu-image">
+                <h3 class="name">Burger-frenchfries</h3>
+                <p class="text"></p>
+              </li>
+              <li class="menu-item">
+                <img src="" alt="" class="menu-image">
+                <h3 class="name"></h3>
+                <p class="text"></p>
+              </li>
+              <li class="menu-item">
+                <img src="" alt="" class="menu-image">
+                <h3 class="name"></h3>
+                <p class="text"></p>
+              </li>
+              
+            </ul>
+          </div>
+        </section>
+
     </main>
 </body>
 <script src="app.js"></script>
