--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <title>Coffee Website</title>
 </head>
 <body>
@@ -138,49 +137,73 @@
             </ul>
           </div>
         </section>
-        
-        <section class="testimonials-section">
-          <h2 class="section-title">Testimonials</h2>
-          <div class="section-content">
-            <div class="slider-container swiper">
-              <div class="slider-wrapper">
-                <ul class="testimonials-list swiper-wrapper">
-                  <li class="testimonial swiper-slide">
-                    <img src="assets/user-1.jpg" alt="" class="user-image">
-                    <h3 class="name">Sarah Tancredi</h3>
-                    <i class="feedback">The French Roast hit the spot—rich, smooth, and just strong enough. Totally worth it, I’ll be back for sure!</i>
-                  </li>
-                  <li class="testimonial swiper-slide">
-                    <img src="assets/user2.jpeg" alt="" class="user-image">
-                    <h3 class="name">Micheal Scofield</h3>
-                    <i class="feedback">The wings had the perfect spicy kick and were so flavorful. Paired with the sides, this combo is a must-try!</i>
-                  </li>
-                  <li class="testimonial swiper-slide">
-                    <img src="assets/user-3.jpg" alt="" class="user-image">
-                    <h3 class="name">Lincoln Burrows</h3>
-                    <i class="feedback">The dessert was heavenly—just the right sweetness and a lovely texture. Made my meal complete!</i>
-                  </li>
-                  <li class="testimonial swiper-slide">
-                    <img src="assets/user-4.jpg" alt="" class="user-image">
-                    <h3 class="name">Veronica Donovam</h3>
-                    <i class="feedback">Iced coffee was smooth and refreshing, not too bitter or too sweet—a perfect pick-me-up.</i>
-                  </li>
-                  <li class="testimonial swiper-slide">
-                    <img src="assets/user-5.jpg" alt="" class="user-image">
-                    <h3 class="name">James Whistler</h3>
-                    <i class="feedback">The burger was juicy with a great blend of spices. Loved every bite!</i>
-                  </li>
-                </ul>
 
-                  <div class="swiper-pagination"></div>
-                   <div class="swiper-button-prev"></div>
-                    <div class="swiper-button-next"></div>
-              </div>
-            </div>
+        <section class="gallery-section">
+          <h2 class="section-title">Gallery</h2>
+          <div class="section-content">
+            <ul class="gallery-list">
+              <li class="gallery-item">
+                <img src="assets/gallery-1.jpg" alt="" class="gallery-image">
+              </li>
+              <li class="gallery-item">
+                <img src="assets/gallery-2.jpg" alt="" class="gallery-image">
+              </li>
+              <li class="gallery-item">
+                <img src="assets/gallery-3.jpg" alt="" class="gallery-image">
+              </li>
+              <li class="gallery-item">
+                <img src="assets/gallery-4.jpg" alt="" class="gallery-image">
+              </li>
+              <li class="gallery-item">
+                <img src="assets/gallery-5.jpg" alt="" class="gallery-image">
+              </li>
+              <li class="gallery-item">
+                <img src="assets/gallery-6.jpg" alt="" class="gallery-image">
+              </li>
+            </ul>
+          </div>
+        </section>
+
+        <section class="contact-section">
+          <h2 class="section-title">Contact Us</h2>
+          <div class="section-contente">
+            <ul class="contact-info-list">
+              <li class="contact-info">
+                <i class="fa solid fa-location-crosshairs"></i>
+                <p>Mumbai Maharashtra , India</p>
+              </li>
+              <li class="contact-info">
+                <i class="fa-regular fa-envelope"></i>
+                <p>info@coffeeshopwebsite.com</p>
+              </li>
+              <li class="contact-info">
+                <i class="fa-solid fa-phone"></i>
+                <p>932113*****</p>
+              </li>
+              <li class="contact-info">
+                <i class="fa-regular fa-clock"></i>
+                <p>Monday - Friday: 9:00 AM -5:00 PM</p>
+              </li>
+              <li class="contact-info">
+                <i class="fa-regular fa-clock"></i>
+                <p>Sunday: Closed</p>
+              </li>
+              <li class="contact-info">
+                <i class="fa-solid fa-globe"></i>
+                <p>www.raunakweb.com</p>
+              </li>
+            </ul>
+            <form action="#" class="contact-form"></form>
+            <!-- From Uiverse.io by Praashoo7 --> 
+            <input type="text" autocomplete="off" name="text" class="form-input" placeholder="Your name" required>
+            <input type="email" autocomplete="off" name="text" class="form-input" placeholder="Your email" required>
+           
+            <textarea placeholder="Your message" class=" form-input" required></textarea>
+          <button class="submit">Button</button>
+            </form>
           </div>
         </section>
     </main>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script src="app.js"></script>
 </html>
