--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
                 <a href="#" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link">About</a>
+                <a href="#about" class="nav-link">About</a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link">Menu</a>
+                <a href="#menu" class="nav-link">Menu</a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link">Testimonials</a>
+                <a href="#gallery" class="nav-link">Gallery</a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link">contact</a>
+                <a href="#contact" class="nav-link">contact</a>
             </li>
         </ul>
         <button id="menu-open-button" class="fas fa-bars"></button>
@@ -54,7 +54,7 @@
             </div>
         </section>
 
-        <section class="about-section">
+        <section class="about-section" id="about">
             <div class="section-content">
                 <div class="about-image-wrapper">
                     <img src="assets/about-us.png" alt="" class="about-image">
@@ -99,7 +99,7 @@
             </div>
         </section>
 
-        <section class="menu-section">
+        <section class="menu-section" id="menu">
           <h2 class="section-title">Our Menu</h2>
           <div class="section-content">
             <ul class="menu-list">
@@ -138,7 +138,7 @@
           </div>
         </section>
 
-        <section class="gallery-section">
+        <section class="gallery-section" id="gallery">
           <h2 class="section-title">Gallery</h2>
           <div class="section-content">
             <ul class="gallery-list">
@@ -164,7 +164,7 @@
           </div>
         </section>
 
-        <section class="contact-section">
+        <section class="contact-section" id="contact">
           <h2 class="section-title">Contact Us</h2>
           <div class="section-contente">
             <ul class="contact-info-list">
@@ -203,9 +203,9 @@
         </section>
 
         <footer class="footer-section">
-          <div class="section-content">
+          <div class="section-contente">
             <p class="copyright-message">0 2024 Coffee Shop</p>
-            <div class="social-linnk">
+            <div class="social-link">
               <div class="card">
                           <a class="socialContainer containerOne" href="https://www.linkedin.com/in/raunakjh/" target="_blank">
                             <svg viewBox="0 0 448 512" class="socialSvg linkdinSvg">
@@ -237,12 +237,12 @@
                             </svg>
                           </a>
                         </div>
-                        <p class="policy-text" >
+            </div>
+            <p class="policy-text" >
                 <a href="#" class="policy-link">Privacy policy</a>
                 <span class="seprator">.</span>
                 <a href="#" class="policy-link">Privacy policy</a>
               </p>
-            </div>
           </div>
 
         </footer>
